Se agrega otra cosa

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content= "Estudio Juridico Contable en Puerto Madryn" />
-	<meta name="keywords" content="estudio , estudio juridico , puerto madryn, holm, saad"/>
-	<meta name="author" content="Estudio Holm. Saad & Asociados" />
-    <meta name="copyright" content="Estudio Holm. Saad & Asociados" />
-	<meta name="robots" content= "index, follow">
+	<meta name="description" content="Estudio Juridico Contable en Puerto Madryn" />
+	<meta name="keywords" content="estudio , estudio juridico , puerto madryn, holm, saad" />
+	<meta name="author" content="Estudio Jurídico Marianela Holm Bengoa" />
+	<meta name="copyright" content="Estudio Jurídico Marianela Holm Bengoa" />
+	<meta name="robots" content="index, follow">
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
 	<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 	<script src="https://kit.fontawesome.com/9817cf6728.js" crossorigin="anonymous"></script>
 	<script src="js/app.js"></script>
 	<link rel="icon" type="image/x-icon" href="img/Logo-vector.ico">
-	<title>Estudio Holm. Saad & Asociados</title>
+	<title>Estudio Jurídico Marianela Holm Bengoa</title>
 </head>
 
 <body>
@@ -24,11 +24,12 @@
 		<div class="nav row g-0 justify-content-between  rounded-top">
 			<!-- Logotipo -->
 			<div class="logo col-12 col-md-12 col-lg-4 d-flex align-items-center justify-content-center ps-4">
-				<h2 class="fw-bold text-uppercase mb-0">Holm. Saad & Asociados</h2>
+				<h2 class="fw-bold text-uppercase mb-0"> Marianela Holm Bengoa</h2>
 			</div>
 
 			<!-- Enlaces -->
-			<nav class="menu  d-lg-flex  justify-content-center align-items-stretch col-12 col-md-12 col-lg-8 col-xl-auto ">
+			<nav
+				class="menu  d-lg-flex  justify-content-center align-items-stretch col-12 col-md-12 col-lg-8 col-xl-auto ">
 				<a href="#N_NOSOTRAS"
 					class="c1 px-4 d-flex align-items-center  text-center text-white text-decoration-none">
 					<div class="w-100">
@@ -43,23 +44,11 @@
 							</svg>
 						</div>
 					</div>
-				</a> 
-				<a href="#N_MARCA"
-					class="c2 px-4 d-flex align-items-center text-center text-white text-decoration-none">
-					<div class="w-100">
-						<span>Nuestra Marca</span>
-						<div class="icono">
-							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-								class="bi bi-person-fill" viewBox="0 0 16 16">
-								<path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
-							</svg>
-						</div>
-					</div>
-				</a>
+				</a>				
 				<a href="#N_SERVICIOS"
 					class="c3 px-4 d-flex align-items-center text-center text-white text-decoration-none">
 					<div class="w-100">
-						<span>Nuestros Servicios</span>
+						<span>Servicios</span>
 						<div class="icono">
 							<?xml version='1.0' encoding='UTF-8'?><svg width='16' height='16' viewBox='0 0 24 24'
 								version='1.1' xmlns='http://www.w3.org/2000/svg'
@@ -99,7 +88,7 @@
 		<div class="row mt-1 justify-content-between ">
 			<div class=" mt-5 pt-5  col-12 col-6 col-lg-6 text-center ">
 				<h2 class="titulobueno1">Estudio Jurídico Contable</h2>
-				<h1 class="titulobueno2  text-center">Holm. Saad & Asociados</h1>
+				<h1 class="titulobueno2  text-center">Marianela Holm Bengoa</h1>
 				<h3 class="titulobueno3">Derecho Marítimo y Comercio Exterior</h3>
 
 			</div>
@@ -110,19 +99,15 @@
 		</div>
 	</header>
 	<main class="container ">
-
-		
 		<div id="N_NOSOTRAS" class="row  px-4 align-items-center ">
-			<div class=" nosotras col-12 ">				
-				<p class="resumen">Somos apasionadas. Disfrutamos lo que hacemos.</p>
-				<p class="resumen">Ofrecemos soluciones profesionales con compromiso, destreza, autenticidad e innovación.</p>
-				<p class="resumen">Nos desafía construir un vínculo de lealtad mutua con nuestros clientes y ofrecer no solo un asesoramiento de calidad, sino una experiencia.</p>
-				<p class="resumen_mayor">Nuestras Jurisdicciones: Chubut, Río Negro y Ciudad Autónoma de Buenos Aires.</p>
+			<div class=" nosotras col-12 ">			
+				<p class="resumen_mayor text-center">Jurisdicciones: Chubut, Río Negro y Ciudad Autónoma de Buenos Aires.
+				</p>
 			</div>
 		</div>
 		<!-- Portafolio my-5 mt-5 -->
 		<div class="row portafolio g-0 px-4 mb-1">
-			<div class="col">				
+			<div class="col">
 				<div class="row galeria mt-3">
 					<!-- Imagen #1 -->
 					<div class="contenedor-imagen mb-4 col-6 col-lg-4">
@@ -185,7 +170,7 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<div class="row acerca-de px-4 mb-3 mt-3 align-items-center ">
 			<div class="col-12 col-lg-4 foto text-center">
 				<img src="img/maru_mediano.jpg" class="rounded-circle mb-3" alt="">
@@ -194,32 +179,19 @@
 					class="fab fa-linkedin-in fa-2x text-decoration-none text-secondary nava"></a>
 			</div>
 			<div class="col-12 col-lg-8 info">
-				<p class="resumen">Mi nombre es Marianela Holm, soy abogada, recibida en la Universidad Nacional de la Patagonia San Juan Bosco, sede Puerto Madryn Chubut</p>
-				<p class="resumen">Especializada en Derecho Marítimo y Aeronáutico en la Universidad de Buenos Aires y participante del posgrado en Derecho Aduanero de la UBA.</p>
+				<p class="resumen">Mi nombre es Marianela Holm, soy abogada, recibida en la Universidad Nacional de la
+					Patagonia San Juan Bosco, sede Puerto Madryn Chubut</p>
+				<p class="resumen">Especializada en Derecho Marítimo y Aeronáutico en la Universidad de Buenos Aires y
+					participante del posgrado en Derecho Aduanero de la UBA.</p>
 				<p class="resumen">Miembro del Instituto Iberoamericano de Derecho Marítimo rama Argentina.</p>
-				<p class="resumen">Matriculada en la justicia Federal, en las provincias de Chubut, Rio Negro y en la Ciudad Autónoma de Buenos Aires.</p>				
+				<p class="resumen">Matriculada en la justicia Federal, en las provincias de Chubut, Rio Negro y en la
+					Ciudad Autónoma de Buenos Aires.</p>
 				<p class="resumen">Fundadora del Estudio Jurídico Contable Holm, Saad y asociados.</p>
 			</div>
 
 		</div>
-		<div class="row acerca-de px-4 mb-3 mt-3 align-items-center ">
-			<div class="col-12 col-lg-4 foto text-center ">
-				<img src="img/lucila_mediano.jpg" class="rounded-circle mb-3" alt="">
-				<p class="nombre">Lucila Saad</p>				
-				<a href="https://www.linkedin.com/in/lucila-saad/" target="_blank"
-					class="fab fa-linkedin-in fa-2x text-decoration-none text-secondary nava"></a>
-			</div>
-			<div class="col-12 col-lg-8 info">
-				<p class="resumen">Mi nombre es Lucila Saad y soy Contadora Pública egresada de la UBA.</p>
-				<p class="resumen">Vivo en la ciudad de Puerto Madryn, Chubut.</p>
-				<p class="resumen">Mi labor profesional me brindó la posibilidad de desempeñarme en el Área de Administración, Finanzas y RRHH en empresas multinacionales de servicios de Forwarding y de adquirir una amplia experiencia en materia de Comercio Exterior.</p>
-				<p class="resumen">Actualmente me desempeño asesorando a particulares y empresas, ofreciendo soluciones tributarias, contables, de RRHH y de COMEX.</p>
-				<p class="resumen">Co- fundadora del Estudio Jurídico Contable Holm, Saad y asociados.</p>
-				<p class="resumen">Contadora Pública.</p>
-				<p class="resumen">Docente PDS UTN.</p>
-			</div>
-		</div>
-		<div id="N_MARCA" class="row mb-3 marca">
+		<!-- Marca-->
+		<!-- <div id="N_MARCA" class="row mb-3 marca">
 			<div class="col-12 mb-3 mt-3">
 				<h1 class="text-center">Nuestra Marca</h1>
 			</div>
@@ -245,12 +217,14 @@
 							<li>Brindar soluciones legales y contables..</li>
 							<li>Dar valor agregado a nuestros clientes, sus empresas y sus vidas.</li>
 							<li>Compartir experiencia e información útil y estratégica.</li>
-							<li>Inspirar la creatividad para impulsar las ventajas competitivas de nuestros clientes.</li>
+							<li>Inspirar la creatividad para impulsar las ventajas competitivas de nuestros clientes.
+							</li>
 							<li>Compartir nuestra pasión y vocación por lo que hacemos.</li>
 						</ul>
 					</div>
 				</div>
 			</div>
+			
 			<div class="col">
 				<div class="card mb-4" style="min-width:250px;">
 					<div class="card-header">
@@ -268,26 +242,28 @@
 				</div>
 			</div>
 		</div>
+		-->
 		<!-- ESERVICIOS-->
 		<div id="N_SERVICIOS" class="row mb-3 servicio">
 			<div class="col-12 mb-3 mt-3">
 				<h1 class="text-center">Nuestros Servicios</h1>
 			</div>
 			<div class="col-12">
-				<div class="accordion accordion-flush mb-5" id="temario">					
+				<div class="accordion accordion-flush mb-5" id="temario">
 					<!-- Elemento #1 -->
 					<div class="accordion-item">
 						<h2 class="accordion-header" id="encabezado-1">
 							<button class="accordion-button" type="button" data-bs-toggle="collapse"
 								data-bs-target="#elemento-1" aria-expanded="true" aria-controles="elemento-1">
-								ASESORAMIENTO EN TRANSPORTE MARÍTIMO 
+								ASESORAMIENTO EN TRANSPORTE MARÍTIMO
 							</button>
 						</h2>
 
 						<div id="elemento-1" class="accordion-collapse collapse show" aria-labelledby="encabezado-1"
 							data-bs-parent="#temario">
 							<div class="accordion-body">
-								<p>Asesoramiento integral por remoción, extracción, traslado, desguace o demolición de Buques y artefactos navales náufragos.
+								<p>Asesoramiento integral por remoción, extracción, traslado, desguace o demolición de
+									Buques y artefactos navales náufragos.
 								</p>
 								<p>Repetición de los gastos por daños a instalaciones portuarias.</p>
 								<p>Locación y/o compraventa de buques.</p>
@@ -299,7 +275,7 @@
 								<p>Averías gruesas.</p>
 								<p>Seguros de intereses vinculados al buque.</p>
 								<p>Seguros de intereses vinculados a los efectos.</p>
-								<p>Asesoramiento integral de otros Seguros conexos con la navegación.</p>								
+								<p>Asesoramiento integral de otros Seguros conexos con la navegación.</p>
 							</div>
 						</div>
 					</div>
@@ -334,7 +310,7 @@
 						<div id="elemento-3" class="accordion-collapse collapse" aria-labelledby="encabezado-3"
 							data-bs-parent="#temario">
 							<div class="accordion-body">
-								<p>Constitución y organización de Sociedades.</p>								
+								<p>Constitución y organización de Sociedades.</p>
 								<p>Asesoramiento en la inscripción (presentación de documentación, contestación de
 									vistas, informes precalificatorios, publicación de edictos, pago de tasas
 									retributivas, etc.).</p>
@@ -344,12 +320,7 @@
 								<p>Disolución y liquidación de Sociedades. Asesoramiento Integral. Asistencia en la
 									Inscripción del Liquidador</p>
 								<p>Trámites ante I.G.J, Fiscalización Anual de S.A., Rúbrica de Libros Legales, Hojas
-									Móviles.</p>
-								<p>Asesoramiento en la confección de actas e informes sobre balances especiales, y sobre
-									inventario resumido de bienes.</p>
-								<p>Informes sobre balances especiales, informes precalificatorios y sobre inventario
-									resumido de bienes.</p>
-								<p>Asesoramiento integral y asistencia en la inscripción del liquidador.</p>
+									Móviles.</p>							
 							</div>
 						</div>
 					</div>
@@ -358,21 +329,14 @@
 						<h2 class="accordion-header" id="encabezado-4">
 							<button class="accordion-button" type="button" data-bs-toggle="collapse"
 								data-bs-target="#elemento-4" aria-expanded="true" aria-controles="elemento-4">
-								ASESORAMIENTO CONTABLE
+								DERECHO PENAL
 							</button>
 						</h2>
 
 						<div id="elemento-4" class="accordion-collapse collapse" aria-labelledby="encabezado-4"
 							data-bs-parent="#temario">
 							<div class="accordion-body">
-								<p>Elaboración de Plan de Cuentas y Registraciones Contables.</p>
-								<p>Preparación y Armado de Estados Contables mensuales y anuales.</p>
-								<p>Asesoramiento en la Confección de Actas e Informes Especiales.</p>
-								<p>Análisis y proyección de estados contables, presupuestos o costos.</p>
-								<p>Organización contable de todo tipo de entes.</p>								
-								<p>Certificaciones e informes contables. Manifestación de bienes, certificación de
-									ingresos, | de Origen de Fondos, otras certificaciones especiales.</p>
-								<p>Auditoría de Estados Contables Anuales.</p>
+								<p>Estupefacientes derecho penal tributario.</p>							
 							</div>
 						</div>
 					</div>
@@ -381,40 +345,17 @@
 						<h2 class="accordion-header" id="encabezado-5">
 							<button class="accordion-button" type="button" data-bs-toggle="collapse"
 								data-bs-target="#elemento-5" aria-expanded="true" aria-controles="elemento-5">
-								ASESORAMIENTO IMPOSITIVO
+								SUCESIONES
 							</button>
 						</h2>
 
 						<div id="elemento-5" class="accordion-collapse collapse" aria-labelledby="encabezado-5"
 							data-bs-parent="#temario">
 							<div class="accordion-body">
-								<p>Liquidación mensual y anual de tributos nacionales, provinciales y municipales.</p>
-								<p>Ingresos brutos locales y habilitaciones comerciales.</p>
+								<p>Testamentos.</p>
+								<p>Donaciones.</p>
 								<p>Convenio Multilateral.</p>
-								<p>Asesoramiento a Monotributistas. Altas y bajas, recategorización, modificación de
-									datos.</p>
-								<p>Confección de declaración jurada informativa cuatrimestral.</p>
-								<p>Régimen de Casas particulares L.</p>
-								<p>IVA, Bienes Personales, Bienes Personales, Acciones y Participaciones societarias.
-								</p>
-								<p>Ganancias Personas humanas, jurídicas y sucesiones indivisas.</p>
-								<p>Asesoramiento para trabajadores en relación de dependencia; deducciones admitidas en
-									el Impuesto a las Ganancias, asesoramiento para la
-									confección del Formulario 572 – SIRADIG, confección de DDJJ informativas o
-									determinativas.</p>
-								<p>Ganancia mínima presunta.</p>
-								<p>Regímenes de información y regímenes de retención.</p>
-								<p>Beneficiarios del exterior.</p>
-								<p>Gestión de certificados para evitar la doble imposición.</p>
-								<p>Inscripciones y trámites ante organismos nacionales y provinciales.</p>
-								<p>Altas y bajas de Impuestos, solicitud CUIT, encuadramiento de actividad económica,
-									etc.</p>
-								<p>Recategorización de Autónomos.</p>
-								<p>Alta de Controladores Fiscales, Bajas y Cambio de Memorias.</p>								
-								<p>Asesoramiento al cliente en la atención de inspecciones y requerimientos, seguimiento
-									de las actuaciones.</p>
-								<p>Preparación y confección de moratorias o planes de facilidades de pago,
-									fiscalizaciones electrónicas.</p>
+								<p> Sucesiones testadas y sucesiones intestadas.</p>							
 							</div>
 						</div>
 					</div>
@@ -431,67 +372,27 @@
 							data-bs-parent="#temario">
 							<div class="accordion-body">
 								<p>Asesoramiento Integral a Capitanes y Armadores.</p>
-								<p>Defensas ante la Prefectura Naval Argentina.</p>
-								<p>Liquidación de sueldos, jornales y cargas sociales.</p>
-								<p>Confección y presentación de declaraciones juradas y boletas de sindicatos..</p>
-								<p>Emisión de recibos de haberes y registración en libro sueldos. Libro de Sueldos
-									Digital..</p>
-								<p>Liquidaciones finales.</p>
-								<p>Inscripciones laborales varias, altas y bajas en los distintos organismos (AFIP,
-									obras sociales, sindicatos, mutuales, etc.)..</p>
-								<p>Certificaciones de servicios.</p>
-								<p>Asesoramiento proactivo sobre los distintos Convenios Colectivos de Trabajo de la
-									actividad.</p>
-								<p>Asistencia en la atención de inspecciones y requerimientos laborales.</p>
-								<p>Asesoramiento al cliente, seguimiento de las actuaciones y las correspondientes
-									contestaciones.</p>
-								<p>Confección de Contratos de Trabajo, armado de Legajos del Personal.</p>
-								<p>Asesoramiento y redacción de notificaciones al personal.</p>
-								<p>Liquidación de aportes de trabajadores autónomos - SICAM.</p>
-								<p>Asesoramiento en el trámite de rúbrica de libros Sueldos ante Secretaría de Trabajo
-									del Chubut.</p>
-								<p>Centralización de Documentación Laboral.</p>
-								<p>Gestión de Acreditación de Haberes y/o Cuentas Fondo Desempleo.</p>
-								<p>Confección del Formulario F1357 Empleador, F572 web empleado.</p>
+								<p>Defensas ante la Prefectura Naval Argentina.</p>												
+								<p>Accidentes de trabajo y enfermedades profesionales.</p>												
 							</div>
 						</div>
-					</div>				
-					
+					</div>
+
 				</div>
 			</div>
 		</div>
-		<!--<div class="row contacto">
-			<h1 class="titulo text-center mb-5">Contactanos</h1>
-			<div class="col-12 col-lg-6 mt-3 text-center">
-				<p> Ubicación: </p>
-				<p> Email: </p>
-				<p> Celular :</p>
-				<p> Celular :</p>
-			</div>
-			<div class="col-12 col-lg-6 mt-3 text-center">
-				<ul class="nav nav-pills gap-3 justify-content-center">
-					<li class="nav-item"><a href="" target="_blank"
-							class="fab fa-linkedin-in fa-2x text-decoration-none text-secondary nava"></a></li>
-					<li class="nav-item"><a href="" target="_blank"
-							class="fa-brands fa-square-instagram fa-2x text-decoration-none text-secondary nava"></a>
-					</li>
-				</ul>
-			</div>
-		</div>-->
 
 	</main>
 </body>
-<footer class="row  cfooter align-items-center pb-3 pt-3">
+<footer  id="N_CONTACTO" class="row  cfooter align-items-center pb-3 pt-3">	
 	<div class="col-12 col-md-6 ">
 		<ul class="nav nav-pills gap-3 justify-content-center">
 			<li class="nav-item"><a href="" target="_blank"
 					class="fab fa-linkedin-in fa-2x text-decoration-none text-secondary nava"></a></li>
 			<li class="nav-item"><a href="" target="_blank"
-					class="fa-brands fa-square-instagram fa-2x text-decoration-none text-secondary nava"></a></li>
-			<li class="nav-item"><a href="" target="_blank"
-				class=" text-decoration-none text-secondary nava"> Celular: 011-1531747443</a></li>
-				<li class="nav-item"><a href="" target="_blank"
-					class=" text-decoration-none text-secondary nava"> Celular: 0280-154262439</a></li>	
+					class="fa-brands fa-square-instagram fa-2x text-decoration-none text-secondary nava"></a></li>			
+			<li class="nav-item"><a href="" target="_blank" class=" text-decoration-none text-secondary nava"> Celular:
+					0280-154262439</a></li>						
 		</ul>
 	</div>
 	<div class="col-12 col-md-6 text-center">
