--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<a href="#N_CONTACTO"
 					class="c5 px-4 d-flex align-items-center text-center text-white text-decoration-none">
 					<div class="w-100">
-						<span>Contactanos</span>
+						<span>Contactos</span>
 						<div class="icono">
 							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
 								class="bi bi-envelope-fill" viewBox="0 0 16 16">
@@ -87,7 +87,7 @@
 		</div>
 		<div class="row mt-1 justify-content-between ">
 			<div class=" mt-5 pt-5  col-12 col-6 col-lg-6 text-center ">
-				<h2 class="titulobueno1">Estudio Jurídico Contable</h2>
+				<h2 class="titulobueno1">Estudio Jurídico</h2>
 				<h1 class="titulobueno2  text-center">Marianela Holm Bengoa</h1>
 				<h3 class="titulobueno3">Derecho Marítimo y Comercio Exterior</h3>
 
@@ -173,8 +173,8 @@
 
 		<div class="row acerca-de px-4 mb-3 mt-3 align-items-center ">
 			<div class="col-12 col-lg-4 foto text-center">
-				<img src="img/maru_mediano.jpg" class="rounded-circle mb-3" alt="">
-				<p class="nombre">Marianela Holm</p>
+				<img src="img/foto_maru_nueva.jpg" class="rounded-circle mb-3" alt="">
+				<p class="nombre">Marianela Holm Bengoa</p>
 				<a href="https://www.linkedin.com/in/marianela-holm-24b9b016b/" target="_blank"
 					class="fab fa-linkedin-in fa-2x text-decoration-none text-secondary nava"></a>
 			</div>
@@ -246,7 +246,7 @@
 		<!-- ESERVICIOS-->
 		<div id="N_SERVICIOS" class="row mb-3 servicio">
 			<div class="col-12 mb-3 mt-3">
-				<h1 class="text-center">Nuestros Servicios</h1>
+				<h1 class="text-center">Servicios</h1>
 			</div>
 			<div class="col-12">
 				<div class="accordion accordion-flush mb-5" id="temario">
@@ -318,9 +318,7 @@
 									Directorio/Gerencia, etc.</p>
 								<p>Fusión y/o Escisión. Asesoramiento integral. Informes sobre balances especiales.</p>
 								<p>Disolución y liquidación de Sociedades. Asesoramiento Integral. Asistencia en la
-									Inscripción del Liquidador</p>
-								<p>Trámites ante I.G.J, Fiscalización Anual de S.A., Rúbrica de Libros Legales, Hojas
-									Móviles.</p>							
+									Inscripción del Liquidador</p>														
 							</div>
 						</div>
 					</div>
@@ -336,7 +334,8 @@
 						<div id="elemento-4" class="accordion-collapse collapse" aria-labelledby="encabezado-4"
 							data-bs-parent="#temario">
 							<div class="accordion-body">
-								<p>Estupefacientes derecho penal tributario.</p>							
+								<p>Estupefacientes.</p>							
+								<p>Derecho penal tributario.</p>							
 							</div>
 						</div>
 					</div>
@@ -353,9 +352,8 @@
 							data-bs-parent="#temario">
 							<div class="accordion-body">
 								<p>Testamentos.</p>
-								<p>Donaciones.</p>
-								<p>Convenio Multilateral.</p>
-								<p> Sucesiones testadas y sucesiones intestadas.</p>							
+								<p>Donaciones.</p>								
+								<p>Sucesiones testadas e intestadas.</p>							
 							</div>
 						</div>
 					</div>
@@ -364,7 +362,7 @@
 						<h2 class="accordion-header" id="encabezado-6">
 							<button class="accordion-button" type="button" data-bs-toggle="collapse"
 								data-bs-target="#elemento-6" aria-expanded="true" aria-controles="elemento-6">
-								ASESORAMIENTO LABORAL Y PREVISIONAL
+								ASESORAMIENTO LABORAL
 							</button>
 						</h2>
 
@@ -389,7 +387,7 @@
 		<ul class="nav nav-pills gap-3 justify-content-center">
 			<li class="nav-item"><a href="" target="_blank"
 					class="fab fa-linkedin-in fa-2x text-decoration-none text-secondary nava"></a></li>
-			<li class="nav-item"><a href="" target="_blank"
+			<li class="nav-item"><a href="https://www.instagram.com/estudioholmbengoa?igshid=OGQ5ZDc2ODk2ZA%3D%3D" target="_blank"
 					class="fa-brands fa-square-instagram fa-2x text-decoration-none text-secondary nava"></a></li>			
 			<li class="nav-item"><a href="" target="_blank" class=" text-decoration-none text-secondary nava"> Celular:
 					0280-154262439</a></li>						
