--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<a href="#N_CONTACTO"
 					class="c5 px-4 d-flex align-items-center text-center text-white text-decoration-none">
 					<div class="w-100">
-						<span>Contactos</span>
+						<span>Contacto</span>
 						<div class="icono">
 							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
 								class="bi bi-envelope-fill" viewBox="0 0 16 16">
@@ -186,7 +186,8 @@
 				<p class="resumen">Miembro del Instituto Iberoamericano de Derecho Marítimo rama Argentina.</p>
 				<p class="resumen">Matriculada en la justicia Federal, en las provincias de Chubut, Rio Negro y en la
 					Ciudad Autónoma de Buenos Aires.</p>
-				<p class="resumen">Fundadora del Estudio Jurídico Contable Holm, Saad y asociados.</p>
+				<p class="resumen">Docente UTN</p>
+				<p class="resumen">Expositora en diversos eventos académicos.</p>
 			</div>
 
 		</div>
