--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 					class="fab fa-linkedin-in fa-2x text-decoration-none text-secondary nava"></a>
 			</div>
 			<div class="col-12 col-lg-8 info">
-				<p class="resumen">Mi nombre es Marianela Holm, soy abogada, recibida en la Universidad Nacional de la
+				<p class="resumen">Mi nombre es Marianela Holm Bengoa, soy abogada, recibida en la Universidad Nacional de la
 					Patagonia San Juan Bosco, sede Puerto Madryn Chubut</p>
 				<p class="resumen">Especializada en Derecho Marítimo y Aeronáutico en la Universidad de Buenos Aires y
 					participante del posgrado en Derecho Aduanero de la UBA.</p>
